@@ -1,7 +1,5 @@
 package com.weibo.rill.flow.olympicene.traversal.runners;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.jayway.jsonpath.JsonPath;
 import com.weibo.rill.flow.interfaces.model.task.TaskInfo;
 import com.weibo.rill.flow.interfaces.model.task.TaskInvokeMsg;
@@ -57,7 +55,7 @@ public class SwitchTaskRunner extends AbstractTaskRunner {
             taskInfo.updateInvokeMsg(taskInvokeMsg);
             updateTaskInvokeEndTime(taskInfo);
             taskInfo.setTaskStatus(TaskStatus.SUCCEED);
-            dagInfoStorage.saveTaskInfos(executionId, ImmutableSet.of(taskInfo));
+            dagInfoStorage.saveTaskInfos(executionId, Set.of(taskInfo));
             return ExecutionResult.builder().taskStatus(taskInfo.getTaskStatus()).build();
         }
 
@@ -135,8 +133,7 @@ public class SwitchTaskRunner extends AbstractTaskRunner {
                                               Set<String> skipTaskNames, Set<String> runTaskNames, DefaultSwitch defaultSwitch) {
         Set<String> nextTaskNames = Arrays.stream(switchObj.getNext().split(",")).map(String::trim)
                 .filter(StringUtils::isNotBlank).collect(Collectors.toSet());
-        boolean condition = false;
-        condition = judgeCondition(taskInfo, input, switchObj, condition, defaultSwitch);
+        boolean condition = judgeCondition(taskInfo, input, switchObj, defaultSwitch);
 
         if (!condition) {
             skipTaskNames.addAll(nextTaskNames);
@@ -146,7 +143,7 @@ public class SwitchTaskRunner extends AbstractTaskRunner {
         return condition;
     }
 
-    private static boolean judgeCondition(TaskInfo taskInfo, Map<String, Object> input, Switch switchObj, boolean condition, DefaultSwitch defaultSwitch) {
+    private static boolean judgeCondition(TaskInfo taskInfo, Map<String, Object> input, Switch switchObj, DefaultSwitch defaultSwitch) {
         // 此前的 condition 已经 break，则不执行当前 condition
         if (defaultSwitch.isBroken()) {
             return false;
@@ -157,12 +154,12 @@ public class SwitchTaskRunner extends AbstractTaskRunner {
         }
         try {
             List<String> result = JsonPath.using(ConditionsUtil.valuePathConf)
-                    .parse(ImmutableMap.of("input", input)).read(switchObj.getCondition());
-            condition = !result.isEmpty();
+                    .parse(Map.of("input", input)).read(switchObj.getCondition());
+            return !result.isEmpty();
         } catch (Exception e) {
             log.warn("switchTask {} evaluation condition expression {} exception. ",
                     taskInfo.getName(), switchObj.getCondition(), e);
+            return false;
         }
-        return condition;
     }
 }
